# toy-playground

./: LICENSE
crawler/: .gitignore  README.md  pyproject.toml
crawler/facebook-group/: .gitignore  README.md  config.json  cookies.example.json  download-ytdlp.ps1  package-lock.json  package.json  tsconfig.json
crawler/facebook-group/src/: config.ts  convert-cookies.ts  crawler.ts  debug-post.ts  debug.ts  download.ts  index.ts
crawler/lottery-crawler/: .env.example
crawler/lottery-crawler/lottery_crawler/: README.md  __main__.py  config.py  exporter.py  parser.py
crawler/lottery-stats/: pyproject.toml
crawler/lottery-stats/lottery_crawler/: __init__.py  analyzer.py  scraper.py
crawler/lottery_crawler/: __init__.py  parser.py  scraper.py  sections.py
crawler/vdo-editor/: cut_half.py  pyproject.toml
vdo-editor/: .env.example  .gitignore  main.py
webm-viewer/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
webm-viewer/.claude/: settings.local.json
webm-viewer/media/: player.html
webm-viewer/scripts/: publish.sh  remove.sh  test.sh
webm-viewer/src/: extension.ts  webmEditorProvider.ts
